k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrms-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hrms-backend
  template:
    metadata:
      labels:
        app: hrms-backend
    spec:
      containers:
      - name: hrms-backend
        image: 930664225702.dkr.ecr.us-east-1.amazonaws.com/hrms_ecr_repo:latest
        ports:
        - containerPort: 8080
