k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms_frontend_service
spec:
  selector:
    app: hrms_frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
