k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-backend-service
spec:
  selector:
    app: hrms-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
